# jupyter-flashcards

./: .gitignore  README.md  conftest.py  notebook.tex  pyproject.toml  user.ipynb
.ipynb_checkpoints/: user-checkpoint.ipynb
.pytest_cache/v/cache/: nodeids
dev/: tryout.py
docs/: README.md  example.ipynb  example.xlsx
jupyter_flashcards/: app.py  cache.py  card.py  dir.py  exceptions.py  preview.py  srs.py  tags.py  utils.py
jupyter_flashcards/renderer/: markdown-hot.css
jupyter_flashcards/static/: handsontable.full.min.css  handsontable.full.min.js  previewtable.js
tests/: test_read.py  test_save.py  test_save_excel.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
tests/input/: test.xlsx
user/patho/: patho.xlsx
