[tool.poetry]
name = "jupyter-flashcards"
version = "0.1.2"
description = "Jupyter notebook utility to view flashcards in both Excel and markdown format."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/patarapolw/jupyter-flashcards"
homepage = "https://github.com/patarapolw/jupyter-flashcards"
include = ["jupyter_flashcards/*.js", "jupyter_flashcards/*.css"]

keywords = ["jupyter", "flashcards"]

[tool.poetry.dependencies]
python = ">=3"
jupyter = "^1.0"
notebook = "^5.6"
requests = "^2.19"
markdown = "^2.6"
pyexcel = "^0.5.8"
pyexcel-export = "^0.3.0"
pyexcel-handsontable = "^0.0.1"
namedlist = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
