[tool.poetry]
name = "jupyter-flashcards"
version = "0.2.1"
description = "Jupyter notebook utility to view flashcards in both Excel and markdown format."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/patarapolw/jupyter-flashcards"
homepage = "https://github.com/patarapolw/jupyter-flashcards"

keywords = ["jupyter", "flashcards"]

[tool.poetry.dependencies]
python = ">=3"
jupyter = "^1.0"
notebook = "^5.6"
pyexcel = "^0.5.8"
pyexcel-xls = "^0.5.7"
pyexcel-xlsxwx = "^0.1.1"
markdown = "^2.6"
pyhandsontable = "^0.2.7"
bs4 = "^0.0.1"
python-dateutil = "^2.7"
namedlist = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
#simplecel = "^0.2.3"
simplecel = {path = "../simplecel"}
